send a email to a portal administrator upon course creation see DT#3489

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -36,6 +36,7 @@
   <li>Reporting: notification of user who have never been active yet</li>
   <li>Reporting: the additional user profiles (defined by the platform administrator through platform administration > profiling) can now be displayed also. </li>
   <li>Subscribing users in a course: you can also filter on a certain addtional user profile field or search inside the values of the additional user profiles fields when subscribing a user in a course (through user/subscribe_user.php) </li>
+  <li>Added Send a email to a portal administrator upon course creation (DT#3489)</li>
 </ul>
 <h3>Debugging</h3>
 <ul>
