--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -21,7 +21,7 @@
 <div id="main">
 <h1>Dokeos 1.8.6.2 - .............</h1>
 <h3>Release notes - summary</h3>
-<h3>New Features</h3>
+<h3>New Features</h3> 
 <ul>
   <li>Implemented by-session content creation tools updates</li>
   <li>Added tabs editor (from admin)</li>
@@ -37,6 +37,7 @@
   <li>Reporting: the additional user profiles (defined by the platform administrator through platform administration > profiling) can now be displayed also. </li>
   <li>Subscribing users in a course: you can also filter on a certain addtional user profile field or search inside the values of the additional user profiles fields when subscribing a user in a course (through user/subscribe_user.php) </li>
   <li>Added Send a email to a portal administrator upon course creation (DT#3489)</li>
+  <li>Added Chat tool is now private when are in sessions or groups (DT#5558)</li>	
 </ul>
 <h3>Debugging</h3>
 <ul>
