--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -37,7 +37,8 @@
   <li>Reporting: the additional user profiles (defined by the platform administrator through platform administration > profiling) can now be displayed also. </li>
   <li>Subscribing users in a course: you can also filter on a certain addtional user profile field or search inside the values of the additional user profiles fields when subscribing a user in a course (through user/subscribe_user.php) </li>
   <li>Added Send a email to a portal administrator upon course creation (DT#3489)</li>
-  <li>Added Chat tool is now private when are in sessions or groups (DT#5558)</li>	
+  <li>Added Chat tool is now private when are in sessions or groups (DT#5558)</li>
+  <li>Wiki: Posibility to definition of wiki pages as tasks for students. Add feedback to student wiki pages, sincronized with their progress in the task. Posibility to establish a time limit for each wiki page. Posibility to establish a max number of words into each wiki page. Posibility to establish a max number versions for each page. Improve control of concurrent users. Improvements in the use of wiki pages such as portfolios of student (individual task)</li>	
 </ul>
 <h3>Debugging</h3>
 <ul>
