--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -39,7 +39,9 @@
   <li>Added Send a email to a portal administrator upon course creation (DT#3489)</li>
   <li>Added Chat tool is now private when are in sessions or groups (DT#5558)</li>
   <li>Wiki: Posibility to definition of wiki pages as tasks for students. Add feedback to student wiki pages, sincronized with their progress in the task. Posibility to establish a time limit for each wiki page. Posibility to establish a max number of words into each wiki page. Posibility to establish a max number versions for each page. Improve control of concurrent users. Improvements in the use of wiki pages such as portfolios of student (individual task)</li>
-  <li>Added when a user is enrolled only in one course, go directly to the course after the login (defined by the platform administrator through platform administration > configuration setting > training)- DT#3466</li>	
+  <li>Added when a user is enrolled only in one course, go directly to the course after the login (defined by the platform administrator through platform administration > configuration setting > training)- DT#3466</li>
+  <li>Added user' photo into user list interface - DT#5496</li>
+  <li>Disabled field trainers(tutor name) in create course form from user portal, by default is current user's name, you can modify this field into setting course - DT#5496 </li>	
 </ul>
 <h3>Debugging</h3>
 <ul>
