--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -47,7 +47,7 @@
   <li>User tags added DT#5508</li>
   <li>Who is online look revamped DT#5490</li>
   <li>New search tool added DT#5610 </li>	
-  <li>User groups added</li>  
+  <li>User groups added  DT#5611 </li>  
   <li>Social network tab added</li>
 
 </ul>
