--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -49,6 +49,7 @@
   <li>New search tool added DT#5610 </li>	
   <li>User groups added  DT#5611 </li>  
   <li>Social network tab added</li>
+  <li>Easy construction of presentations with the images of document tool</li>
 
 </ul>
 <h3>Debugging</h3>
