--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-  <title>Dokeos Changelog</title><link rel="stylesheet" href="default.css" type="text/css" media="screen,projection" />
+  <title>Chamilo Changelog</title><link rel="stylesheet" href="default.css" type="text/css" media="screen,projection" />
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
   <style type="text/css">
 	<!--
@@ -14,12 +14,12 @@
 
 <body>
 <div id="header1">
-<h1>Dokeos&nbsp;Changelog</h1>
+<h1>Chamilo&nbsp;Changelog</h1>
 </div>
 <a href="index.html">Documentation</a> &gt; Changelog
 <div id="outerframe">
 <div id="main">
-<h1>Dokeos 1.8.6.2 - .............</h1>
+<h1>Chamilo 1.8.6.2 - .............</h1>
 <h3>Release notes - summary</h3>
 <h3>New Features</h3> 
 <ul>
