--- a/documentation/credits.html
+++ b/documentation/credits.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-  <title>Dokeos Credits</title><link rel="stylesheet" href="default.css" type="text/css" media="screen,projection" />
+  <title>Chamilo Credits</title><link rel="stylesheet" href="default.css" type="text/css" media="screen,projection" />
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
   <style type="text/css">
 	<!--
@@ -14,12 +14,12 @@
 
 <body>
 <div id="header1">
-  <h1>Dokeos Credits</h1>
+  <h1>Chamilo Credits</h1>
 </div>
 <a href="index.html">Documentation</a> &gt; Credits
 <h1>Creator</h1>
 
-Thomas De Praetere (thomas.depraetere@dokeos.com)
+Thomas De Praetere (thomas.depraetere@dokeos.com) 
 
 <h1>Core developers</h1>
 <ol>
