--- a/documentation/index.html
+++ b/documentation/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-  <title>Dokeos 1.8.6.1</title><link rel="stylesheet" href="default.css" type="text/css" media="screen,projection" />
+  <title>Chamilo 1.8.6.2</title><link rel="stylesheet" href="default.css" type="text/css" media="screen,projection" />
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
   <style type="text/css">
 	<!--
@@ -14,13 +14,13 @@
 
 <body>
 <div id="header1">
-<h1>Dokeos FREE 1.8.6.1 <span style="font-style: italic;">Babel</span> - Documentation</h1>
+<h1>Chamilo 1.8.6.2 <span style="font-style: italic;"></span> - Documentation</h1>
 </div>
 
 <div id="outerframe">
 <div id="main">
-<h1>About Dokeos</h1>
-<p><a href="readme.html">About Dokeos</a>     </p>
+<h1>About Chamilo</h1>
+<p><a href="readme.html">About Chamilo</a>     </p>
 <h1>Installing and upgrading</h1>
 <a href="installation_guide.html">English installation guide</a>
 <a href="installation_guide_es_ES.html">Spanish installation guide</a>
