--- a/documentation/installation_guide_es_ES.html
+++ b/documentation/installation_guide_es_ES.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Guia de Instalación de Dokeos 1.8.6.2 Babel</title>
+	<title>Guia de Instalación de Chamilo 1.8.6.2</title>
 	<link rel="stylesheet" href="default.css" type="text/css" media="screen,projection" />
 	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
 	<style type="text/css">
@@ -19,7 +19,7 @@
 
 
 <div id="header1">
-<h1>Guía de Instalación de Dokeos 1.8.6.2 Babel</h1>
+<h1>Guía de Instalación de Chamilo 1.8.6.2</h1>
 
 </div>
 
@@ -29,15 +29,10 @@
 <p></p>
 
 
-<p>Gracias por descargar Dokeos, la suite de aprendizaje de código abierto profesional.</p>
-
-
+<p>Gracias por descargar Chamilo, la suite de aprendizaje de código abierto profesional.</p>
 <ul>
-
   <li>Vista rápida de las <a href="http://www.dokeos.com/en/node/58">Características de Dokeos&nbsp;</a></li>
-
-  <li>Prueba Dokeos en <a href="http://campus.dokeos.com">Free Campus</a></li>
-
+  <li>Prueba Chamilo en <a href="http://campus.dokeos.com">Free Campus</a></li>
 </ul>
 
 
@@ -54,19 +49,12 @@ Si desea ahorrar tiempo, problemas y dinero, alternativamente puede tener su Por
 <ol>
 
   <li><a href="#1._Pre-requisites">Prerrequisitos</a></li>
-
-  <li><a href="#2._Installation_of_Dokeos_LMS">Instalación de Dokeos LMS</a></li>
-
+  <li><a href="#2._Installation_of_Dokeos_LMS">Instalación de Chamilo LMS</a></li>
   <li><a href="#3._Upgrade_from_a_previous_version_of">Actualizar desde una versión previa de Dokeos</a></li>
-
   <li><a href="#4._Troubleshooting">Solución de Problemas</a></li>
-
   <li><a href="#5._Administration_section">Sección de administración</a></li>
-
   <li><a href="#6._LDAP">LDAP&nbsp;</a></li>
-
   <li><a href="#7._Mathematical_formulas">Fórmulas Matemáticas con LaTeX</a></li>
-
 </ol>
 
 
@@ -76,14 +64,13 @@ Si desea ahorrar tiempo, problemas y dinero, alternativamente puede tener su Por
 <h2><a name="1._Pre-requisites"></a>1. Prerrequisitos</h2>
 
 
-Dokeos
-puede ser instalado indiferentemente en servidores Windows, Linux, Mac OS X y UNIX.
+Chamilo puede ser instalado indiferentemente en servidores Windows, Linux, Mac OS X y UNIX.
 Sin embargo, nosotros recomendamos el uso de un servidor Linux para una óptima flexibilidad,
 control remoto y escalabilidad. <br />
 
 <br />
 
-Dokeos es  un LMS que se ejecuta con <span style="font-weight: bold;">Apache 1.3, 2.0</span>, <span style="font-weight: bold;">MySQL 5.1</span> y <span style="font-weight: bold;">PHP 5.1</span> (trilogía también llamada  <span style="font-weight: bold;">AMP</span>).<br />
+Chamilo es  un LMS que se ejecuta con <span style="font-weight: bold;">Apache 1.3, 2.0</span>, <span style="font-weight: bold;">MySQL 5.1</span> y <span style="font-weight: bold;">PHP 5.1</span> (trilogía también llamada  <span style="font-weight: bold;">AMP</span>).<br />
 
 <br />
 
@@ -99,7 +86,7 @@ Todo este software es software de código abierto y está disponible libremente.
 
 <br />
 
-Para ejecutar Dokeos <span style="font-weight: bold;">LMS</span> en su servidor,  necesita instalar WAMP, LAMP o MAMP:
+Para ejecutar Chamilo <span style="font-weight: bold;">LMS</span> en su servidor,  necesita instalar WAMP, LAMP o MAMP:
 <ul>
 
   <li>Para instalar <span style="font-weight: bold;">WAMP</span> (AMP en Windows),  recomendamos el instalador <a href="http://www.apachefriends.org/en/xampp.html">XAMPP</a> .exe<a href="http://www.apachefriends.org/en/xampp.html"></a></li>
@@ -352,7 +339,7 @@ necesario, puede estar configurado en Off y Dokeos funcionará bien.
 <li>php-iconv</li>
 <li>php-json</li> 
 <li>php-mbstring</li>
-<ul>
+</ul>
 
 <p><a href="http://dev.mysql.com/doc/mysql/en/index.html"></a><br />
 
