--- a/documentation/readme.html
+++ b/documentation/readme.html
@@ -1,18 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
-
-
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
-
-
-
-  <title>Dokeos Information</title><link rel="stylesheet" href="default.css" type="text/css" media="screen,projection" />
-
-
+  <title>Chamilo Information</title><link rel="stylesheet" href="default.css" type="text/css" media="screen,projection" />
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
-
-
   <style type="text/css">
 	<!--
 		@page { size: 21cm 29.7cm; margin: 2cm }
@@ -20,25 +10,23 @@
 		p { margin-bottom: 0.21cm }
 		.code {margin: 1em 1em 1em 2em; padding: 0.5em; background-color: rgb(229, 229, 229); vertical-align: top; border: 1px solid #999999;}
 	--></style></head>
-
 <body>
-
 <div id="header1">
-<h1>About Dokeos</h1>
+<h1>About Chamilo</h1>
 
 </div>
 
-<a href="index.html">Documentation</a> &gt; About Dokeos
+<a href="index.html">Documentation</a> &gt; About Chamilo
 <div id="outerframe">
 <div id="main">
-<p>Dokeos is an elearning and course management web application,<br />
+<p>Chamilo is an elearning and course management web application,<br />
 
       and is free software (GNU GPL). It's translated into 30 languages,<br />
 
       SCORM compliant, and light and flexible.</p>
 
 
-<p>Dokeos supports many different kinds of learning and collaboration activities.<br />
+<p>Chamilo supports many different kinds of learning and collaboration activities.<br />
 
       Teachers/trainers can create, manage and publish their courses through the web.<br />
 
@@ -130,9 +118,9 @@
 
       Mozilla (1.2+), Safari, Opera, ...</p>
 
-<h1>Dokeos.com</h1>
+<h1>Chamilo.org</h1>
 
-<p>Dokeos is also a consulting company helping companies in their e-learning projects and selling Dokeos PRO and Dokeos MEDICAL.<br />
+<p>Chamilo is also a consulting company helping companies in their e-learning projects and selling Dokeos PRO and Dokeos MEDICAL.<br />
 
       <br />
 
