--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -50,11 +50,14 @@
   <li>User groups added  DT#5611 </li>  
   <li>Social network tab added</li>
   <li>Easy construction of presentations with the images of document tool</li>
+  <li>Upgrade from FCKEditor 2.6.4.1 to <strong>FCKEditor 2.6.5, Build 23959</strong> has been implemented. (#2867)</li>
+  <li>Settings WYSIWYG editor from Platform Admin Area</li>
+  <li>Upgrade html2pdf libray to 3.26</li>
+  <li>Upgrade mimetex to 1.71</li>
 
 </ul>
 <h3>Debugging</h3>
 <ul>
-  <li>Online editor: A upgrade from FCKEditor 2.6.4.1 to <strong>FCKEditor 2.6.5, Build 23959</strong> has been implemented. (#2867)</li>
   <li>Fixed a bug in course homepage always showing a box even when no tools were shown (r8747:3ad59f6aed1f)</li>
   <li>Score result in reporting is expressed as a percentage</li>
   <li>CSV export of reporting no longer contains html code in the last column</li>
