--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -11,7 +11,6 @@
 		p { margin-bottom: 0.21cm }
 		.code {margin: 1em 1em 1em 2em; padding: 0.5em; background-color: rgb(229, 229, 229); vertical-align: top; border: 1px solid #999999;}
 	--></style></head>
-
 <body>
 <div id="header1">
 <h1>Chamilo&nbsp;Changelog</h1>
@@ -61,7 +60,8 @@
   <li>User portal page improved when Social Network is enabled.(User image, in box, and subscriptions links are showed) </li>
   <li>New inc/ajax library added to reorder ajax calls in Chamilo see CT#431 </li>
   <li>RSS Feed added by default to the extra field aswell as the user tag (Needs to change visibility)</li>
-  <li>Reporting tab performance improved (main/mySpace/courseLog.php file)</li>   
+  <li>Reporting tab performance improved (main/mySpace/courseLog.php file)</li>  
+</li>   
 
 </ul>
 <h3>Debugging</h3>
@@ -70,6 +70,7 @@
   <li>Score result in reporting is expressed as a percentage</li>
   <li>CSV export of reporting no longer contains html code in the last column</li>
   <li>The course list is now sorted like you have defined on the course management page</li>
+  <li>Display order in LP fixed (Organize view) #5668</li>
 </ul>
 <br />
 <h3>CSS changes</h3>
