--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -58,7 +58,7 @@
   <li>Message tool improved: More simply to use, no annoing unuseless ajax menu </li>
   <li>Message tool: Send multiple attachements, send emails to many users </li>  
   <li>User portal page improved when Social Network is enabled.(User image, in box, and subscriptions links are showed) </li>
-  <li>New inc/ajax library added to reorder ajax calls in Chamilo see CT#431 </li>
+  <li>New inc/ajax library added to re-order AJAX calls in Chamilo see CT#431. All new jquery + AJAX reponses should be in that directory. </li>
   <li>RSS Feed added by default to the extra field aswell as the user tag (Needs to change visibility)</li>
   <li>Reporting tab performance improved (main/mySpace/courseLog.php file)</li>  
 </li>   
