Update change log

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -60,7 +60,8 @@
   <li>User portal page improved when Social Network is enabled.(User image, in box, and subscriptions links are showed) </li>
   <li>New inc/ajax library added to re-order AJAX calls in Chamilo see CT#431. All new jquery + AJAX reponses should be in that directory. </li>
   <li>RSS Feed added by default to the extra field aswell as the user tag (Needs to change visibility)</li>
-  <li>Reporting tab performance improved (main/mySpace/courseLog.php file)</li>  
+  <li>Reporting tab performance improved (main/mySpace/courseLog.php file)</li>
+  <li>Added View a List students who have not submitted an assignment, and send a reminder to your email. BT#487 BT#489</li>      
 </li>   
 
 </ul>
