Update change log

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -99,6 +99,13 @@
 	</li>
 	  
 </ul>
+<li>Exercises tool
+    <ul>
+        <li>If the option is selected glossary terms shows the tools lessons (SCORM) and exercises, in the description of exercise may see terms that may be responses to the question</li>
+    </ul>
+    </li>
+      
+</ul>
 <br />
 <h1>Dokeos 1.8.6.1 - August 2009</h1>
 <h3>Release notes - summary</h3>
