--- a/documentation/credits.html
+++ b/documentation/credits.html
@@ -179,6 +179,7 @@ see also http://www.dokeos.com/extensions/
   <li>First version:</li>
   <li>Adapted from PHPBB 1.4 (http://www.phpbb.com)</li>
   <li>Modifications: Patrick Cool (patrick.cool@ugent.be)</li>
+  <li>Julio Montoya Armas (gugli100@gmail.com)</li>
   <li>Management of scoring of threads:</li>
   <li>Christian Fasanando</li>
   <li>Isaac Flores</li>
@@ -344,8 +345,6 @@ see also http://www.dokeos.com/extensions/
   <li>Julio Montoya Armas (gugli100@gmail.com)</li>
   <li>Isaac Flores</li>
 </ul>
-
-
 
 <h2>User Image</h2>
 <ul>
