--- a/documentation/installation_guide.html
+++ b/documentation/installation_guide.html
@@ -26,13 +26,11 @@
 
 <p>Thank you for downloading Chamilo 1.8.6.2.</p>
 <ul>
-  <li>Quick preview of <a href="http://www.dokeos.com/en/node/58">Dokeos features&nbsp;</a></li>
-
-  <li>Test Dokeos on <a href="http://campus.dokeos.com">Free Campus</a></li>
+  <li>Test Chamilo on <a href="http://campus.chamilo.org">Free Campus</a></li>
 </ul>
 
 
-<p>This guide explains how to install Dokeos FREE. Please read this fully before proceeding with the installation.</p>Check <a href="http://www.dokeos.com/en/buy.php">Dokeos PRO</a> and <a href="http://www.dokeos.com/en/buy.php">Dokeos MEDICAL</a> for a complete learning suite with a Service Level Agreement. <br />
+<p>This guide explains how to install Chamilo FREE. Please read this fully before proceeding with the installation.</p>
 
 
 <h2><b>Contents</b></h2>
@@ -40,7 +38,7 @@
 <ol>
 
   <li><a href="#1._Pre-requisites">Pre-requisites</a></li>
-  <li><a href="#2._Installation_of_Dokeos_LMS">Installation of Dokeos LMS</a></li>
+  <li><a href="#2._Installation_of_Chamilo_LMS">Installation of Chamilo LMS</a></li>
   <li><a href="#3._Upgrade_from_a_previous_version_of">Upgrade from a previous version of Dokeos</a></li>
   <li><a href="#4._Troubleshooting">Troubleshooting</a></li>
   <li><a href="#5._Administration_section">Administration section</a></li>
@@ -88,20 +86,20 @@ For instance, on a Ubuntu server,&nbsp;use Shell or Synaptic following the
 <h3><span style="font-weight: bold;">MySQL database server</span></h3>
 
 You will need a login and password allowing to administrate and create
-at least one database. By default, Dokeos will create a new database
+at least one database. By default, Chamilo will create a new database
 for each course created. It means your host should allow you to create
-and administrate several databases. You can also install Dokeos using
+and administrate several databases. You can also install Chamilo using
 only one database, in that case you have to select this option during
 the installation.<span style="font-weight: bold;"><br />
 
 </span>
 <hr style="width: 100%; height: 2px;" />
-<h2><a name="2._Installation_of_Dokeos_LMS"></a><span style="font-weight: bold;">2. Installation of Chamilo LMS</span></h2>
+<h2><a name="2._Installation_of_Chamilo_LMS"></a><span style="font-weight: bold;">2. Installation of Chamilo LMS</span></h2>
 
 <a href="http://www.chamilo.org/download.php"></a>
 <ul>
 
-  <li><a href="http://www.dokeos.com/node/33">Download Dokeos LMS</a></li>
+  <li><a href="http://www.chamilo.org/download">Download Chamilo LMS</a></li>
 
   <li>Unzip it</li>
 
@@ -244,7 +242,7 @@ these ones:</p>
 
 <p>
 Past Chamilo versions required register_globals to be set to On. This is
-no longer necessary, this can be set to Off and Dokeos will work fine.</p>
+no longer necessary, this can be set to Off and Chamilo will work fine.</p>
 
 
 <p><strong>BSD users:</strong> these php libraries have to be included during php installation:</p>
@@ -358,24 +356,24 @@ the old path.</p>
 <b>NOTE:</b><br />
 
 Do not modify the home_*.html files directly. Instead,
-choose "Configure the homepage" in the Dokeos administration section.</p>
+choose "Configure the homepage" in the Chamilo administration section.</p>
 
 <p></p>
 <h3>3.3 In both cases</h3>
 
 The following directories need to be readable, writeable and executable for the web server:
 <ul>
-  <li>dokeos/main/inc/conf/</li>
-  <li>dokeos/main/upload/users/</li>
-  <li>dokeos/main/default_course_document/</li>
-  <li>dokeos/archive/</li>
-  <li>dokeos/courses/</li>
-  <li>dokeos/home/</li>
+  <li>chamilo/main/inc/conf/</li>
+  <li>chamilo/main/upload/users/</li>
+  <li>chamilo/main/default_course_document/</li>
+  <li>chamilo/archive/</li>
+  <li>chamilo/courses/</li>
+  <li>chamilo/home/</li>
 </ul>
 
 On Linux, Mac OS X and BSD operating systems you can quick-fix this using the
 CHMOD 777 command, but if you are unsure, we recommend you seek advice for
-your own OS on <a href="http://www.dokeos.com/en/node/66">our forum</a>.
+your own OS on <a href="http://forum.chamilo.org">our forum</a>.
 In Windows, you may need to check the properties of the folders.
 <p></p>
 <h3>3.4 Quick-upgrade from 1.6.x guide for Linux</h3>
@@ -635,11 +633,11 @@ to insert mathematical formulas into your documents.<br />
 
   <br />
   <br />
-  Contact address: Dokeos, Rue Victor Hugo, 201,&nbsp;B-1030 Brussels, Belgium<br />
+  Contact address<br />
 
-  Mail: info@dokeos.com<br />
+  Mail: info@chamilo.org<br />
 
-  Tel. +32 (0)2 669 69 55<br />
+  Tel. <br />
   <br />
 
 </p>
