--- a/documentation/installation_guide_es_ES.html
+++ b/documentation/installation_guide_es_ES.html
@@ -30,18 +30,15 @@
 
 
 <p>Gracias por descargar Chamilo, la suite de aprendizaje de código abierto profesional.</p>
-<ul>
-  <li>Vista rápida de las <a href="http://www.dokeos.com/en/node/58">Características de Dokeos&nbsp;</a></li>
-  <li>Prueba Chamilo en <a href="http://campus.dokeos.com">Free Campus</a></li>
+<ul>  
+  <li>Prueba Chamilo en <a href="http://campus.chamilo.org">Free Campus</a></li>
 </ul>
 
 
-<p>Esta guía explica como instalar el Sistema de Gestión de Aprendizaje de Dokeos. Explica como instalar la conversión a PowerPoint Dokeos Oogie
-y la videoconferencia de Dokeos, aunque estos paquetes
-no son requeridos para usar Dokeos LMS. &nbsp;Por favor, lea completamente este documento antes de proceder con la instalación. </p>
+<p>Esta guía explica como instalar el Sistema de Gestión de Aprendizaje Chamilo. Explica como instalar la conversión a PowerPoint Chamilo Oogie
+y la videoconferencia de Chamilo, aunque estos paquetes
+no son requeridos para usar Chamilo LMS. &nbsp;Por favor, lea completamente este documento antes de proceder con la instalación. </p>
 
-
-Si desea ahorrar tiempo, problemas y dinero, alternativamente puede tener su Portal de Dokeos <a href="http://www.dokeos.com/en/node/6">desplegado</a> o <a href="http://www.dokeos.com/en/node/32">instalado</a> por Dokeos o alguno de sus socios.<br />
 
 
 <h2><b>Contenidos</b></h2>
@@ -49,7 +46,7 @@ Si desea ahorrar tiempo, problemas y dinero, alternativamente puede tener su Por
 <ol>
 
   <li><a href="#1._Pre-requisites">Prerrequisitos</a></li>
-  <li><a href="#2._Installation_of_Dokeos_LMS">Instalación de Chamilo LMS</a></li>
+  <li><a href="#2._Installation_of_Chamilo_LMS">Instalación de Chamilo LMS</a></li>
   <li><a href="#3._Upgrade_from_a_previous_version_of">Actualizar desde una versión previa de Dokeos</a></li>
   <li><a href="#4._Troubleshooting">Solución de Problemas</a></li>
   <li><a href="#5._Administration_section">Sección de administración</a></li>
@@ -107,9 +104,9 @@ Por ejemplo, en un servidor Ubuntu,&nbsp;use Shell o Synaptic siguiendo la
 <h3><span style="font-weight: bold;">Servidor de Base de Datos MySQL</span></h3>
 
 Usted necesitará una cuenta de acceso y una contraseña que le permita administrar y crear
-al menos una base de datos. De manera predeterminada, Dokeos creará una nueva base de datos
+al menos una base de datos. De manera predeterminada, Chamilo creará una nueva base de datos
 para cada curso. Esto significa que su proveedor deberá permitirle crear y
-administrar varias bases de datos. Usted también puede instalar Dokeos con una sola base de datos, en ese caso,  deberá seleccionar esta opción durante
+administrar varias bases de datos. Usted también puede instalar Chamilo con una sola base de datos, en ese caso,  deberá seleccionar esta opción durante
 la instalación.
 <br />
 
@@ -130,7 +127,7 @@ Para aprovechar la ventaja de la conversión <span style="font-weight: bold;">Oo
 
 <br />
 
-Para aprovechar la ventaja de la <span style="font-weight: bold;">Videoconferencia</span> de Dokeos, necesita:<br />
+Para aprovechar la ventaja de la <span style="font-weight: bold;">Videoconferencia</span> de Chamilo, necesita:<br />
 
 
 <ul>
@@ -144,7 +141,7 @@ Para aprovechar la ventaja de la <span style="font-weight: bold;">Videoconferenc
 
 </span>
 <hr style="width: 100%; height: 2px;" />
-<h2><a name="2._Installation_of_Dokeos_LMS"></a><span style="font-weight: bold;">2. Instalación de Dokeos LMS</span></h2>
+<h2><a name="2._Installation_of_Chamilo_LMS"></a><span style="font-weight: bold;">2. Instalación de Chamilo LMS</span></h2>
 
 <a href="http://www.dokeos.com/download.php"></a>
 <ul>
@@ -506,8 +503,8 @@ Luego:
 <h2><a name="4._Troubleshooting"></a>4. Solución de problemas</h2>
 
 
-<p>Si usted tiene problemas, vaya al <a href="http://www.dokeos.com">Sitio Web de Dokeos</a> y haga una pregunta en el
-<a href="http://www.dokeos.com/en/node/66">foro de soporte</a>. Por favor, primero lea los mensajes previos para ver si existe ya
+<p>Si usted tiene problemas, vaya al <a href="http://www.chamilo.org">Sitio Web de Chamilo</a> y haga una pregunta en el
+<a href="http://forum.chamilo.org">foro de soporte</a>. Por favor, primero lea los mensajes previos para ver si existe ya
 una respuesta a su pregunta. Nosotros también mantenemos una lista de
 <a href="http://www.dokeos.com/wiki/index.php/FAQ">Preguntas Frecuentes</a>.
 </p>
@@ -722,11 +719,11 @@ Linux usando el siguiente comando:</i>
   <br />
   <br />
 
-  Dirección de Contacto: Dokeos, Rue du Corbeau, 108, B-1030 Brussels, Belgium<br />
+  Dirección de Contacto: Chamilo<br />
 
-  Correo: info@dokeos.com<br />
+  Correo: info@chamilo.org<br />
 
-  Tel. +32 (0)2 669 69 55<br />
+  Tel. <br />
   <br />
 
 </p>
