--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -62,12 +62,15 @@
   <li>RSS Feed added by default to the extra field aswell as the user tag (Needs to change visibility)</li>
   <li>Reporting tab performance improved (main/mySpace/courseLog.php file)</li>
   <li>Added View a List students who have not submitted an assignment, and send a reminder to your email. BT#487 BT#489</li>
-  <li>Exercise tool: New type of question added. Multiple answer combination a.k.a "Exact question" CT#402</li>        
+  <li>Exercise tool: New type of question added. Multiple answer combination a.k.a "Exact question" CT#402</li>
+  <li>Exercise tool: Email notifications when an student answer an Exercise</li>
+  <li>Glossary tool improved. Possibility to view glosary terms in Exercises and Learning paths (Courses)</li>   
 </li>   
 
 </ul>
 <h3>Debugging</h3>
 <ul>
+
   <li>Fixed a bug in course homepage always showing a box even when no tools were shown (r8747:3ad59f6aed1f)</li>
   <li>Score result in reporting is expressed as a percentage</li>
   <li>CSV export of reporting no longer contains html code in the last column</li>
