update of changelog for the performance improvement and the platform setting for the sort direction of the users

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -51,6 +51,8 @@
   <li>Social network tab added</li>
   <li>Easy construction of presentations with the images of document tool</li>
 
+  <li>Performance improvement when getting a list of users (for instance in the dropbox when sending a new document)</li>
+  <li>Platform setting (in User category) that determines how the users should be sorted: by first name or by last name</li>
 </ul>
 <h3>Debugging</h3>
 <ul>
