Replacing Dokeos to Chamilo

--- a/documentation/readme.html
+++ b/documentation/readme.html
@@ -35,32 +35,32 @@
       through groups, forums, chat.</p>
 
 
-<p>Technically, Dokeos is a web application written in PHP that stores data in a <br />
+<p>Technically, Chamilo is a web application written in PHP that stores data in a <br />
 
       MySQL database. Users access it using a web browser.</p>
 
 
 <p>If you would like to know more or help develop this software, please visit<br />
 
-      our homepage at <a href="http://www.dokeos.com">http://www.dokeos.com</a></p>
+      our homepage at <a href="http://www.chamilo.org">http://www.chamilo.org</a></p>
 
 
 <h1>SCORM</h1>
 
-    Dokeos FREE imports Scorm 1.2 contents.<br />
+    Chamilo FREE imports Scorm 1.2 contents.<br />
 
     For more information on Scorm normalisation, see http://www.adlnet.org<br />
 
 <h1>Licence</h1>
 
-<p>Dokeos is distributed under the GNU General Public license (GPL).<br />
+<p>Chamilo is distributed under the GNU General Public license (GPL).<br />
 
       Read the <a href="licence.html">GNU General Public license (GPL)</a> .</p>
 
 
 <h1>Portability</h1>
 
-<p>Dokeos is an AMP software. This means it should work on any platform running Apache<br />
+<p>Chamilo is an AMP software. This means it should work on any platform running Apache<br />
 
       + MySQL + PHP. It is then supposed to work on the following Operating Systems :</p>
 
@@ -98,7 +98,7 @@
 
 <h1>Interoperability</h1>
 
-<p>Dokeos imports Scorm compliant learning contents. It imports then "On the shelve"<br />
+<p>Chamilo imports Scorm compliant learning contents. It imports then "On the shelve"<br />
 
       contents from many companies : NETg, Skillsoft, Explio, Microsoft, Macromedia, etc.</p>
 
@@ -110,32 +110,21 @@
 
       export to CSV and/or XML.</p>
 
-<p>Dokeos includes a LDAP module that allows admin to deactivate MySQL authentication<br />
+<p>Chamilo includes a LDAP module that allows admin to deactivate MySQL authentication<br />
 
       and replace it by connection to a LDAP directory.</p>
 
-<p>Client side, Dokeos runs on any browser : Firefox, MS Internet Explorer (5.0+), Netscape (4.7+),<br />
+<p>Client side, Chamilo runs on any browser : Firefox, MS Internet Explorer (5.0+), Netscape (4.7+),<br />
 
       Mozilla (1.2+), Safari, Opera, ...</p>
 
 <h1>Chamilo.org</h1>
 
-<p>Chamilo is also a consulting company helping companies in their e-learning projects and selling Dokeos PRO and Dokeos MEDICAL.<br />
-
+<p>Chamilo is also a consulting company helping companies in their e-learning projects and selling Chamilo PRO and Chamilo MEDICAL.<br />
       <br />
-
-      You can find more information on our services on <a href="http://www.dokeos.com/en/node/61">http://www.dokeos.com/en/node/61</a><a href="http://www.dokeos.com/services.php"></a></p>
-
-<p>
+ <p>
 <em>Contact address</em>: <br />
-
-      Dokeos<br />Rue Victor Hugo, 201<br />
-
-      B-1030 Brussels - Belgium<br />
-
-      Tel. +32 (2) 669 69 55<br />
-
-      Mail: <a href="mailto:info@dokeos.com">info@dokeos.com</a>
+      Mail: <a href="mailto:info@chamilo.org">info@chamilo.org</a>
 </p>
 
 </div>
