--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -70,7 +70,6 @@
 </ul>
 <h3>Debugging</h3>
 <ul>
-
   <li>Fixed a bug in course homepage always showing a box even when no tools were shown (r8747:3ad59f6aed1f)</li>
   <li>Score result in reporting is expressed as a percentage</li>
   <li>CSV export of reporting no longer contains html code in the last column</li>
@@ -85,6 +84,9 @@
 <h3>Known issues</h3>
 <ul>
   <li>In Hotspot under Windows® (server-side), uploading a PNG file results in an unstable exercise</li>
+  <li>Scorm: Objectives and interactions are not supported</li>
+  <li>Scorm: Hotspot and Exact type of questions can't be exported in a SCORM package</li>
+  
 </ul>
 <h3>Deprecated files</h3>
 <ul>
