--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -64,7 +64,9 @@
   <li>Added View a List students who have not submitted an assignment, and send a reminder to your email. BT#487 BT#489</li>
   <li>Exercise tool: New type of question added. Multiple answer combination a.k.a "Exact question" CT#402</li>
   <li>Exercise tool: Email notifications when an student answer an Exercise</li>
-  <li>Glossary tool improved. Possibility to view glosary terms in Exercises and Learning paths (Courses)</li>   
+  <li>Glossary tool improved. Possibility to view glosary terms in Exercises and Learning paths (Courses)</li>
+  <li>iepngfix added to support png images in ie6</li>
+     
 </li>   
 
 </ul>
